--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
 BASE_URL=YOUR E2C HOST
 EMAIL=YOUR EMAIL
 REGION=YOUR REGION
-DYNAMODB_TABLE_NAME=YOUR TABLE NAME
-TABLE_ARN=YOUR TABLE ARN
-LAMBDA_FUNCTION_NAME=YOUR LAMBDA FUNCTION NAME
-LAMBDA_FUNCTION_ARN=YOUR LAMBDA FUNCTION ARN
-SQS_ARN=YOUR SQS ARN
+CLOUDWATCH_PREFIX=YOUR CLOUDWATCH PREFIX
+LOG_CLOUDINIT_GROUP_NAME=YOUR LOG GROUP NAME
+LOG_GROUP_MESSAGES=YOUR MESSAGES LOG GROUP
+LOG_EVENT_HANDLER=YOUR EVENT HANDLER LOG GROUP
+CLOUD_TRAIL_NAME=YOUR CLOUD TRAIL NAME
+CLOUD_APP_NAME=YOUR APP NAME
+CLOUD_TRAIL_ARN=YOUR TRAIL ARN
